Lettertype titel veranderd

--- a/css.css
+++ b/css.css
@@ -35,7 +35,7 @@ nav {
 .titel {
     text-align: left;
     font-size:65px;
-    font-family: 'Amatic SC', sans-serif;
+    font-family: Montserrat, sans-serif;
 }
 
 .menu {
